Update 1.5.0
Log4j Patch, 1.18 works.